--- a/index.html
+++ b/index.html
@@ -6,13 +6,21 @@
         <title>Page Title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-        <script src="https://kit.fontawesome.com/7f7a5c4796.js" crossorigin="anonymous"></script>
+        <script
+            src="https://kit.fontawesome.com/7f7a5c4796.js"
+            crossorigin="anonymous"
+        ></script>
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
             integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
             crossorigin="anonymous"
         />
+        <link
+            href="https://fonts.googleapis.com/css?family=Nunito"
+            rel="stylesheet"
+        />
+
         <script
             src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -358,7 +366,9 @@
         <!-- Start footer -->
         <footer class="container-fluid footer">
             <!-- Divisor -->
-            <div class="divisor row mt-5 py-4 px-3 mb-5 d-flex justify-content-between">
+            <div
+                class="divisor row mt-5 py-4 px-3 mb-5 d-flex justify-content-between"
+            >
                 <div>
                     <span class="mr-5 font-weight-bold"
                         >Ready to get started?</span
@@ -382,10 +392,26 @@
                         <div class="col col-md-auto mr-5">
                             <h6 class="font-weight-bold footer-ul">COMPANY</h6>
                             <ul class="list-unstyled mt-3">
-                                <li class=""><a class="footer-links" href="#">About us</a></li>
-                                <li class=""><a class="footer-links" href="#">Certification</a></li>
-                                <li class=""><a class="footer-links" href="#">Customer Stories</a></li>
-                                <li class=""><a class="footer-links" href="#">Partners</a></li>
+                                <li class="">
+                                    <a class="footer-links" href="#"
+                                        >About us</a
+                                    >
+                                </li>
+                                <li class="">
+                                    <a class="footer-links" href="#"
+                                        >Certification</a
+                                    >
+                                </li>
+                                <li class="">
+                                    <a class="footer-links" href="#"
+                                        >Customer Stories</a
+                                    >
+                                </li>
+                                <li class="">
+                                    <a class="footer-links" href="#"
+                                        >Partners</a
+                                    >
+                                </li>
                             </ul>
                         </div>
 
@@ -393,33 +419,85 @@
                         <div class="col col-md-auto mr-5">
                             <h6 class="font-weight-bold footer-ul">ABOUT</h6>
                             <ul class="list-unstyled mt-3">
-                                <li class=""><a class="footer-links" href="#">Privacy Policy</a></li>
-                                <li class=""><a class="footer-links" href="#">Cookie Policy</a></li>
-                                <li class=""><a class="footer-links" href="#">Terms of Use</a></li>
-                                <li class=""><a class="footer-links" href="#">FAQ</a></li>
+                                <li class="">
+                                    <a class="footer-links" href="#"
+                                        >Privacy Policy</a
+                                    >
+                                </li>
+                                <li class="">
+                                    <a class="footer-links" href="#"
+                                        >Cookie Policy</a
+                                    >
+                                </li>
+                                <li class="">
+                                    <a class="footer-links" href="#"
+                                        >Terms of Use</a
+                                    >
+                                </li>
+                                <li class="">
+                                    <a class="footer-links" href="#">FAQ</a>
+                                </li>
                             </ul>
                         </div>
 
                         <!-- Get in touch -->
                         <div class="col col-md-auto mr-5">
-                            <h6 class="font-weight-bold footer-ul">GET IN TOUCH</h6>
+                            <h6 class="font-weight-bold footer-ul">
+                                GET IN TOUCH
+                            </h6>
                             <ul class="list-unstyled mt-3">
-                                <li class=""><a class="footer-links" href="#">Contact us</a></li>
-                                <li class=""><a class="footer-links" href="#">Jobs</a></li>
-                                <li class=""><a class="footer-links" href="#">Locations</a></li>
+                                <li class="">
+                                    <a class="footer-links" href="#"
+                                        >Contact us</a
+                                    >
+                                </li>
+                                <li class="">
+                                    <a class="footer-links" href="#">Jobs</a>
+                                </li>
+                                <li class="">
+                                    <a class="footer-links" href="#"
+                                        >Locations</a
+                                    >
+                                </li>
                             </ul>
                         </div>
 
                         <!-- Technical support -->
                         <div class="col col-md-auto">
-                            <h6 class="font-weight-bold footer-ul">TECHNICAL SUPPORT</h6>
+                            <h6 class="font-weight-bold footer-ul">
+                                TECHNICAL SUPPORT
+                            </h6>
                             <ul class="list-unstyled mt-3">
-                                <li class=""><a class="footer-links" href="#">Incident?</a></li>
-                                <li class=""><a class="footer-links" href="#">Communities</a></li>
-                                <li class=""><a class="footer-links" href="#">Contact Support</a></li>
-                                <li class=""><a class="footer-links" href="#">Customer Portal</a></li>
-                                <li class=""><a class="footer-links" href="#">Documentation Portal</a></li>
-                                <li class=""><a class="footer-links" href="#">Report Security Issue</a></li>
+                                <li class="">
+                                    <a class="footer-links" href="#"
+                                        >Incident?</a
+                                    >
+                                </li>
+                                <li class="">
+                                    <a class="footer-links" href="#"
+                                        >Communities</a
+                                    >
+                                </li>
+                                <li class="">
+                                    <a class="footer-links" href="#"
+                                        >Contact Support</a
+                                    >
+                                </li>
+                                <li class="">
+                                    <a class="footer-links" href="#"
+                                        >Customer Portal</a
+                                    >
+                                </li>
+                                <li class="">
+                                    <a class="footer-links" href="#"
+                                        >Documentation Portal</a
+                                    >
+                                </li>
+                                <li class="">
+                                    <a class="footer-links" href="#"
+                                        >Report Security Issue</a
+                                    >
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -429,17 +507,37 @@
                     <div class="col-sm-4 px-0 ml-4">
                         <div class="float-right">
                             <div class="mb-4">
-                                <p class="footer-media-title mb-0">GIFT DEMO CARDS</p>
-                                <p class="footer-media-text">Give a Demo Today</p>
+                                <p class="footer-media-title mb-0">
+                                    GIFT DEMO CARDS
+                                </p>
+                                <p class="footer-media-text">
+                                    Give a Demo Today
+                                </p>
                             </div>
                             <div>
-                                <p class="footer-media-title mb-0">SOCIAL MEDIA</p>
-                                <p class="footer-media-text">Give a Demo Today</p>
+                                <p class="footer-media-title mb-0">
+                                    SOCIAL MEDIA
+                                </p>
+                                <p class="footer-media-text">
+                                    Give a Demo Today
+                                </p>
                             </div>
                             <div class="">
-                                <a class="mr-2" href="#"><i class="fab fa-twitter fa-lg text-dark"></i></a>
-                                <a class="mr-2" href="#"><i class="fab fa-facebook fa-lg text-dark"></i></a>
-                                <a href="#"><i class="fab fa-instagram fa-lg text-dark"></i></a>
+                                <a class="mr-2" href="#"
+                                    ><i
+                                        class="fab fa-twitter fa-lg text-dark"
+                                    ></i
+                                ></a>
+                                <a class="mr-2" href="#"
+                                    ><i
+                                        class="fab fa-facebook fa-lg text-dark"
+                                    ></i
+                                ></a>
+                                <a href="#"
+                                    ><i
+                                        class="fab fa-instagram fa-lg text-dark"
+                                    ></i
+                                ></a>
                             </div>
                         </div>
                     </div>
@@ -449,9 +547,7 @@
             <!-- End Upper Container -->
 
             <!-- Lower Container -->
-            <div>
-
-            </div>
+            <div></div>
             <!-- End Lower Container -->
         </footer>
         <!-- End footer -->
